--- a/4chan-win95.user.styl
+++ b/4chan-win95.user.styl
@@ -10,6 +10,14 @@
 @preprocessor   stylus
 ==/UserStyle== */
 
+pseudoelement() {
+	for i in arguments {
+		&::-{i} {
+			{block}
+		}
+	}
+}
+
 @-moz-document domain("4chan.org"), domain("4channel.org") {
 	/**
 	 * Variables
@@ -92,6 +100,7 @@
 	**/
 	body {
 		background: none var(--color-window);
+		image-rendering: pixelated;
 		color: var(--color-window-text);
 		font: var(--font);
 		margin: 8px;
@@ -125,6 +134,20 @@
 		margin-bottom: 5px;
 	}
 
+	// Controls
+	input, button, select, textarea {
+		appearance: none;
+		box-sizing: border-box;
+		font: var(--font) !important;
+		border: 1px solid;
+		border-radius: 0 !important;
+		height: 19px;
+
+		&:disabled {
+			background-color: var(--color-button-face) !important;
+			color: var(--color-gray-text) !important;
+		}
+	}
 	input {
 		/.field,
 		/select,
@@ -147,11 +170,6 @@
 				border-color: var(--box-3d-border-color) !important;
 			}
 		}
-		&[type="number"] {
-			padding: 0 !important;
-			padding-left: 1px !important;
-			height: 17px;
-		}
 		&::placeholder {
 			color: var(--color-gray-text);
 		}
@@ -166,6 +184,7 @@
 			padding: 3px 0;
 			margin: 0 6px;
 			width: 74px;
+			height: unset;
 
 			&:active {
 				border-color: var(--color-button-shadow) !important;
@@ -175,7 +194,6 @@
 
 		&[type="checkbox"],
 		&[type="radio"] {
-			appearance: none;
 			background: no-repeat center;
 			outline: none;
 			margin: 0;
@@ -199,7 +217,7 @@
 			width: 12px;
 			height: 12px;
 
-			// TODO: I hope there is a way to do it without images
+			// TODO: a way to do it without images
 			&:active {
 				background-image:  url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMBAMAAACkW0HUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAPUExURf///wAAAIeIj8DHyP///1QVyYYAAAABdFJOUwBA5thmAAAAOElEQVQI12NgYFBSYgACJUFBIM0kaGws6MDAJGxsbODAoGgMBCzYKagSJgZjYwYHBgYXMAISQBIAZBYIx/Jku34AAAAASUVORK5CYII=');
 			}
@@ -212,26 +230,76 @@
 			}
 		}
 
-		&[type="range"] {
-			box-shadow: none !important;
-		}
-	}
-	input, button, select, textarea {
-		font: var(--font) !important;
-		border: 1px solid;
-		border-radius: 0 !important;
+		&[type="number"] {
+			padding: 0 !important;
+			padding-left: 1px !important;
 
-		&:disabled {
-			background-color: var(--color-button-face) !important;
-			color: var(--color-gray-text) !important;
+			// TODO:
+			// Firefox refuses to apply this
+			// Chrome uses 1 button for 2 actions, so no :active
+			+pseudoelement(
+				moz-number-spin-up,
+				moz-number-spin-down,
+				webkit-inner-spin-button
+			) {
+				appearance: none;
+				opacity: 1;
+				background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAARAgMAAAB/ZB4yAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAMUExURQAAAIeIj8DHyP///zDHlOAAAAA1SURBVAjXY1i1atUChv3//19g2LVq1QSGXStAxAKtCRDu1NDQAAYwAKpbwYCuGKwOrANFMQDd7SXzerZgGwAAAABJRU5ErkJggg==');
+				background-color: var(--color-button-face);
+				color: var(--color-button-text);
+				border-color: var(--button-3d-border-color-exact);
+				box-shadow: var(--button-3d-box-shadow-exact);
+				margin-right: -1px;
+				width: 16px;
+				height: 17px;
+			}
+		}
+		&[type="range"] {
+			background-color: transparent;
+			border: none;
+			box-shadow: none !important;
+			padding: 8px 4px;
+			margin: -4px !important;
+
+			// Chrome has the thumb as the track's child
+			.ua-blink & {
+				height: 31px;
+				padding-bottom: 12px;
+
+				&::-webkit-slider-thumb {
+					margin-top: -9px;
+				}
+			}
+
+			+pseudoelement(moz-range-track, webkit-slider-runnable-track) {
+				border: 1px solid;
+				border-color: var(--box-3d-border-color);
+				box-shadow: var(--box-3d-box-shadow);
+				height: 0;
+			}
+			+pseudoelement(moz-range-thumb, webkit-slider-thumb) {
+				appearance: none;
+				// TODO: not image
+				background:  url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAVBAMAAABiXgn+AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAPUExURf///wAAAIeIj8DHyP///1QVyYYAAAABdFJOUwBA5thmAAAAKklEQVQI12NwAQEBBmdjY2MjelAsQEqRgQHIBXIYgFwQh4HBSQBMMQIxAL3XFEiuWtpeAAAAAElFTkSuQmCC');
+				border: none;
+				border-radius: 0;
+				width: 11px;
+				height: 21px;
+
+				../:active^[-1..-1] {
+					background-image:  url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAVBAMAAABiXgn+AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAPUExURf///wAAAIeIj8DHyP///1QVyYYAAAABdFJOUwBA5thmAAAANElEQVQI12NwAQEBBmdjY2MjIAUETkDKxMSERjwWY2dnRQYGIBfIYQByQRwGBicBMMUIxABhtBY+Cv3r7wAAAABJRU5ErkJggg==');
+				}
+			}
 		}
 	}
 	select {
-		appearance: none;
 		background:  url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAARAgMAAACpwcRXAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAMUExURQAAAIeIj8DHyP///zDHlOAAAAAxSURBVAjXY1i1atUKhv3//39h2LVq1RIMgoEJSDRwAYkFWkBiBRYlcGJqaGgIAwgAAFaAKE0Wbou6AAAAAElFTkSuQmCC') var(--color-window) no-repeat 100% !important;
 		padding: 0 !important;
 		padding-right: 18px !important;
-		height: 19px;
+
+		.ua-blink & {
+			padding-left: 1px !important;
+		}
 
 		&:focus {
 			outline: none; // unable to do right side, as it conflicts with the arrow
@@ -248,6 +316,57 @@
 		display: inline-flex;
 		align-items: center;
 		gap: 6px;
+	}
+
+	::-webkit-scrollbar {
+		background: repeating-conic-gradient(
+			#c0c7c8 0% 25%,
+			var(--color-window) 0% 50%
+		);
+		background-size: 2px 2px;
+
+		&,
+		&-button {
+			width: 16px;
+			height: 16px;
+		}
+		&-button,
+		&-thumb {
+			background: var(--color-button-face) no-repeat center;
+			border: 1px solid;
+			//border-color: var(--button-3d-border-color-exact);
+			border-color: var(--color-button-face) var(--color-button-shadow-dark) var(--color-button-shadow-dark) var(--color-button-face);
+			//box-shadow: var(--button-3d-box-shadow-exact);
+			box-shadow:
+				inset 1px 1px 0 var(--color-button-highlight),
+				inset -1px -1px 0 var(--color-button-shadow);
+		}
+
+		&-button {
+			background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAECAYAAABCxiV9AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAtSURBVBhXY/z//z8DDDAygrj/GaFcBiYoDZZApkEALIksAAJwhUCMIoEADAwA3ckMC4nTcHYAAAAASUVORK5CYII=');
+
+			&:active {
+				border-color: var(--color-button-shadow);
+				box-shadow: 0 0 0 1px var(--color-button-shadow-dark);
+			}
+
+			&:increment {
+				background-image:  url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAECAYAAABCxiV9AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAArSURBVBhXY2RgYPgPxFgB0////0EKMABInAnGAItAAYwPlgQBmABCIQMDAIflEvtEtJMHAAAAAElFTkSuQmCC');
+			}
+
+			&:horizontal {
+				background-image:  url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAHCAYAAAAvZezQAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAySURBVBhXTYwBCgAwCAK1///ZZa22gygPkpIwkFTcu4J3iQmGOe8nieywXOrll1vaEjisghAJeJVSAgAAAABJRU5ErkJggg==');
+
+				&:increment {
+					background-image:  url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAHCAYAAAAvZezQAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAySURBVBhXRY3JDQAwCMOS7r8zxZEAPzgsDkuqhhwewXalayJgZFYohp0Abq2YwxH3RfqHzhAHIWlRxQAAAABJRU5ErkJggg==');
+				}
+			}
+		}
+
+		&-corner,
+		&-resize {
+			background-color: #c0c7c8;
+		}
 	}
 
 	/**
