--- a/4chan-win95.user.styl
+++ b/4chan-win95.user.styl
@@ -1,11 +1,12 @@
 /* ==UserStyle==
 @name           W9x for 4chan
-@namespace      github.com/openstyles/stylus
-@version        0.3
 @description    Transform 4chan into a Windows 9x interface
-
+@version        0.3
 @author         (You)
+
+@namespace      https://github.com/2641a40fd44383320adde4b027a1d0b03bd550
 @homepageURL    https://github.com/2641a40fd44383320adde4b027a1d0b03bd550/4chan-win95
+@supportURL     https://github.com/2641a40fd44383320adde4b027a1d0b03bd550/4chan-win95/issues
 
 @preprocessor   stylus
 ==/UserStyle== */
